# BitNetMCU

./: .gitignore  BitNetMCU.py  BitNetMCU_inference.c  BitNetMCU_model.h  export_mnist_test.py  exportquant.py  pyproject.toml  trainingparameters.yaml
modeldata/: BNRV_CNNMNIST_Aug_BitMnist_BNRV_width96_64_0_epochs60.pth
