[project]
name = "bitnetmcu"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torch-summary>=1.4.5",
    "torchvision>=0.24.1",
]
